@@ -1,0 +1,26 @@
+<html>
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<link rel="STYLESHEET" type="text/css" href="../pgadmin3.css">
+<title>Guru Hints</title>
+</head>
+
+<body>
+
+<h3>Saving passwords</h3>
+<p>
+<b>WARNING:</b> You have opted to save your password. It will be stored in plain text in your home directory on *nix 
+systems, or in your user profile on Windows. If you do not want this to happen, please press the Cancel button.
+</p>
+<p>
+pgAdmin uses PostgreSQL's 'pgpass' mechanism to store your passwords. On *nix systems, the password will be stored in
+<i>~/.pgpass</i>, whilst on Windows systems it will be stored in <i>%APPDATA%\PostgreSQL\pgpass.conf</i> (%APPDATA% is the 
+'Application Data' folder in your user profile). This mechanism is used by default by all programs that use the libpq 
+library to access the server, which includes command line applications such as pg_dump and pg_restore, other GUI
+applications, and drivers such as psqlODBC. This means that those applications may automatically connect to the 
+server using your stored password. If you do not want this to happen, you should not use the <i>Store Password</i>
+option in pgAdmin.
+</p>
+</body>
+</html>
