@@ -78,7 +78,8 @@
                                         <File Id="en_us_hints.object-editing.html" Name="object~1.htm" LongName="object-editing.html" DiskId="1" src="../../docs/en_US/hints/object-editing.html" />
                                         <File Id="en_us_hints.pk.html" Name="pk.htm" LongName="pk.html" DiskId="1" src="../../docs/en_US/hints/pk.html" />
                                         <File Id="en_us_hints.vacuum.html" Name="vacuum.htm" LongName="vacuum.html" DiskId="1" src="../../docs/en_US/hints/vacuum.html" />
-                                        <File Id="en_us_hints.view-without-pk.html" Name="view-w~.htm" LongName="view-without-pk.html" DiskId="1" src="../../docs/en_US/hints/view-without-pk.html" />
+                                        <File Id="en_us_hints.view-without-pk.html" Name="view-w~1.htm" LongName="view-without-pk.html" DiskId="1" src="../../docs/en_US/hints/view-without-pk.html" />
+										<File Id="en_us_hints.saving-passwords.html" Name="saving~1.htm" LongName="saving-passwords.html" DiskId="1" src="../../docs/en_US/hints/saving-passwords.html" />
                                     </Component>
                                 </Directory>
                             </Directory>
