@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-02-05 DP  1.8.0  Add a guru hint to warn the user of the consequences of 
+                      storing passwords, per Tony Caduto.
 2007-02-05 DP  1.6.3  Fix the graphical explain to properly display backwards
                       index scan nodes, per Brendan O'Shea.
 2007-02-05 DP  1.6.3  Fix default perspective names, per Ezequias
